--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
 		"@nextui-org/system": "2.2.5",
 		"@nextui-org/theme": "2.2.9",
 		"@react-aria/visually-hidden": "3.8.12",
-		"clsx": "2.1.1",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
 		"next": "14.2.4",
 		"next-themes": "^0.2.1",
+		"patch-package": "^8.0.0",
 		"react": "18.3.1",
 		"react-dom": "18.3.1"
 	},
