part3 of upgrading my website

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
 	},
 	"dependencies": {
+		"@next/third-parties": "^14.2.7",
 		"@nextui-org/button": "2.0.37",
 		"@nextui-org/code": "2.0.32",
 		"@nextui-org/input": "2.2.4",
@@ -24,7 +25,7 @@
 		"@react-aria/visually-hidden": "3.8.12",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
-		"next": "14.2.4",
+		"next": "^14.2.7",
 		"next-themes": "^0.2.1",
 		"patch-package": "^8.0.0",
 		"react": "18.3.1",
