--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
 		"next-themes": "^0.2.1",
 		"patch-package": "^8.0.0",
 		"react": "18.3.1",
-		"react-dom": "18.3.1"
+		"react-dom": "18.3.1",
+		"sharp": "^0.33.5"
 	},
 	"devDependencies": {
 		"@types/node": "20.5.7",
